[package]
name = "quarkdrive-webdav"
version = "1.0.9"
edition = "2024"

description = "A WebDAV client for quarkdriver"
authors = ["chenqimiao1994@126.com"]
license = "MIT"
homepage = "https://github.com/chenqimiao/quarkdrive-webdav"
repository = "https://github.com/chenqimiao/quarkdrive-webdav.git"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.10"
dav-server = { version = "0.8.0", default-features = false, features = ["hyper"] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"
clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12.20", features = ["rustls-tls"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1.41"
time = "0.3.41"
bytes = "1.10.1"
moka = { version = "0.12.10", features = ["future"] }
dashmap = "7.0.0-rc2"
zip = "4.0.0"
url = "2.5.4"
path-slash = "0.2.1"
headers = "0.4.1"
hyper = {version = "1.6.0", features = ["full"]}
http = "0.2.10"
hyper-util = { version = "0.1.14", features = ["server"] }
rustls-pemfile = {version = "2.2.0", optional = true}
#tls-listener = { version = "0.11.0", features = ["hyper-h1", "hyper-h2", "rt"], optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
#actix-rt = "2.2.0"
#background-jobs = "0.19.0"


tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
signal-hook = {version = "0.3.18", features = ["default"]}
signal-hook-tokio = "0.3.1"
openssl-probe = {version = "0.1.6", optional = true}
dirs = "6.0.0"
serde_json = "1.0.140"
atty = "0.2.14"
self_update = "0.42.0"

# Unix signal support
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[profile.release]
lto = true

[package.metadata.deb]
maintainer = "Qimiao Chen <chenqimiao1994@126.com>"
copyright = "2025-present, Qimiao Chen <chenqimiao1994@126.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
WebDAV server for QuarkDrive"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/quarkdriver-webdav", "usr/bin/", "755"],
    ["systemd.service", "etc/systemd/system/quarkdrive-webdav.service", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/quarkdrive-webdav", dest = "/usr/bin/quarkdrive-webdav", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/quarkdrive-webdav/LICENSE", doc = true, mode = "0644" },
    { source = "systemd.service", dest = "/etc/systemd/system/quarkdrive-webdav.service", config = true, mode = "0644" },
]
